// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Multi Step Progress Basic Multi Step Progress (With Closing Drawer) 1`] = `
Array [
  .c11 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c25 {
  padding-left: 44px;
  padding-right: 12px;
}

.c29 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c34 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  box-sizing: border-box;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c36 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c17 {
  fill: #00D200;
}

.c18 {
  fill: #FFF;
}

.c37 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c27 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c28 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c26 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c26,
.c26[type='button'],
.c26[type='reset'],
.c26[type='submit'] {
  -webkit-appearance: button;
}

.c26::-moz-focus-inner,
.c26[type='button']::-moz-focus-inner,
.c26[type='reset']::-moz-focus-inner,
.c26[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c26:-moz-focusring,
.c26[type='button']:-moz-focusring,
.c26[type='reset']:-moz-focusring,
.c26[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c21 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c30 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c22 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c24 {
  display: block;
}

.c24 + .c23 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c32 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c19 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c19::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c12 {
  position: relative;
}

.c8 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c33 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c33 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c11 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c25 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c29 {
    padding-left: 52px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c31 {
    display: none;
  }
}

@media (min-width:760px) {
  .c15 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c5 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c19 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c19 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c1 {
    position: static;
    top: 0;
    left: 0;
    width: 100%;
  }
}

<div
    className="c0 c1"
  >
    <div
      aria-label=""
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c7 c8"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c9"
                >
                  <span
                    className="c10"
                  >
                    <div
                      className="c11 c12"
                    >
                      <div
                        className="c13"
                      >
                        
                      </div>
                      <span
                        aria-hidden={true}
                        className="c14 c15"
                      >
                        <svg
                          aria-hidden="true"
                          className="c16"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <g
                            fill="none"
                            fillRule="evenodd"
                          >
                            <path
                              className="c17"
                              d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
                            />
                            <path
                              className="c18"
                              d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
                            />
                          </g>
                        </svg>
                      </span>
                      Investment objective
                    </div>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li
            className="c4 c19"
          >
            <div
              className="c6 "
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c7 c8"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c9"
                >
                  <span
                    className="c20"
                  >
                    <div
                      className="c11 c12"
                    >
                      <span
                        aria-hidden={true}
                        className="c14 c15"
                      >
                        <span
                          className="c21"
                        >
                          2
                        </span>
                      </span>
                      Time and risk
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <ol
              className="c22"
            >
              <li
                className="c23 c24"
              >
                <div
                  className="c25"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c26"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c9"
                    >
                      <span
                        className="c27"
                      >
                        <div
                          className="c13"
                        >
                          
                        </div>
                        Investment period
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c23 c24"
              >
                <div
                  className="c25"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c26"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c9"
                    >
                      <span
                        className="c14"
                      >
                        <div
                          className="c13"
                        >
                          
                        </div>
                        Frequency
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c23 c24"
              >
                <div
                  className="c25"
                >
                  <span
                    className="c27"
                  >
                    <div
                      className="c13"
                    >
                      
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <span
                className="c28"
              >
                <div
                  className="c29 c12"
                >
                  <div
                    className="c13"
                  >
                    
                  </div>
                  <span
                    aria-hidden={true}
                    className="c14 c15"
                  >
                    <span
                      className="c30"
                    >
                      3
                    </span>
                  </span>
                  Allocations
                </div>
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        className="c31"
      >
        <ol
          className="c32"
        >
          <li
            className="c4 c19"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c7 c33"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c9"
              >
                <span
                  className="c20"
                >
                  <div
                    className="c11 c12"
                  >
                    <div
                      className="c34"
                    >
                      <div
                        className="c35"
                      >
                        <span
                          aria-hidden={true}
                          className="c14 c15"
                        >
                          <span
                            className="c21"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c35"
                      >
                        <svg
                          aria-hidden="true"
                          className="c36 c37"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules / Multi Step Progress Basic Multi Step Progress 1`] = `
Array [
  .c11 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c25 {
  padding-left: 44px;
  padding-right: 12px;
}

.c29 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c34 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  box-sizing: border-box;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c36 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c17 {
  fill: #00D200;
}

.c18 {
  fill: #FFF;
}

.c37 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c27 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c28 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c26 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c26,
.c26[type='button'],
.c26[type='reset'],
.c26[type='submit'] {
  -webkit-appearance: button;
}

.c26::-moz-focus-inner,
.c26[type='button']::-moz-focus-inner,
.c26[type='reset']::-moz-focus-inner,
.c26[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c26:-moz-focusring,
.c26[type='button']:-moz-focusring,
.c26[type='reset']:-moz-focusring,
.c26[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c21 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c30 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c22 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c24 {
  display: block;
}

.c24 + .c23 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c32 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c19 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c19::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c12 {
  position: relative;
}

.c8 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c33 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c33 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c11 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c25 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c29 {
    padding-left: 52px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c31 {
    display: none;
  }
}

@media (min-width:760px) {
  .c15 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c5 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c19 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c19 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c1 {
    position: static;
    top: 0;
    left: 0;
    width: 100%;
  }
}

<div
    className="c0 c1"
  >
    <div
      aria-label=""
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c7 c8"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c9"
                >
                  <span
                    className="c10"
                  >
                    <div
                      className="c11 c12"
                    >
                      <div
                        className="c13"
                      >
                        
                      </div>
                      <span
                        aria-hidden={true}
                        className="c14 c15"
                      >
                        <svg
                          aria-hidden="true"
                          className="c16"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <g
                            fill="none"
                            fillRule="evenodd"
                          >
                            <path
                              className="c17"
                              d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
                            />
                            <path
                              className="c18"
                              d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
                            />
                          </g>
                        </svg>
                      </span>
                      Investment objective
                    </div>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li
            className="c4 c19"
          >
            <div
              className="c6 "
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c7 c8"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c9"
                >
                  <span
                    className="c20"
                  >
                    <div
                      className="c11 c12"
                    >
                      <span
                        aria-hidden={true}
                        className="c14 c15"
                      >
                        <span
                          className="c21"
                        >
                          2
                        </span>
                      </span>
                      Time and risk
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <ol
              className="c22"
            >
              <li
                className="c23 c24"
              >
                <div
                  className="c25"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c26"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c9"
                    >
                      <span
                        className="c27"
                      >
                        <div
                          className="c13"
                        >
                          
                        </div>
                        Investment period
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c23 c24"
              >
                <div
                  className="c25"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c26"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c9"
                    >
                      <span
                        className="c14"
                      >
                        <div
                          className="c13"
                        >
                          
                        </div>
                        Frequency
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c23 c24"
              >
                <div
                  className="c25"
                >
                  <span
                    className="c27"
                  >
                    <div
                      className="c13"
                    >
                      
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <span
                className="c28"
              >
                <div
                  className="c29 c12"
                >
                  <div
                    className="c13"
                  >
                    
                  </div>
                  <span
                    aria-hidden={true}
                    className="c14 c15"
                  >
                    <span
                      className="c30"
                    >
                      3
                    </span>
                  </span>
                  Allocations
                </div>
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        className="c31"
      >
        <ol
          className="c32"
        >
          <li
            className="c4 c19"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c7 c33"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c9"
              >
                <span
                  className="c20"
                >
                  <div
                    className="c11 c12"
                  >
                    <div
                      className="c34"
                    >
                      <div
                        className="c35"
                      >
                        <span
                          aria-hidden={true}
                          className="c14 c15"
                        >
                          <span
                            className="c21"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c35"
                      >
                        <svg
                          aria-hidden="true"
                          className="c36 c37"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules / Multi Step Progress Multi Step Progress With Long Content 1`] = `
Array [
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<h1>
    Lorem ipsum dolor
  </h1>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {
  .c0 {
    height: 1px;
    width: 1px;
    pointer-events: none;
  }
}

<div
    className="c0"
  />,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {
  .c0 {
    padding-top: 0px;
  }
}

@media (max-width:975px) {

}

<div
    className="c0"
  />,
  .c8 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c19 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c24 {
  padding-left: 44px;
  padding-right: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c29 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  box-sizing: border-box;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c31 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c32 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c25 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c15,
.c15[type='button'],
.c15[type='reset'],
.c15[type='submit'] {
  -webkit-appearance: button;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c13 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c23 {
  display: block;
}

.c23 + .c22 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c27 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c14 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c14::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c9 {
  position: relative;
}

.c16 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c28 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c28 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c8 {
    padding-left: 52px;
  }
}

@media (min-width:760px) {
  .c19 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c24 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c26 {
    display: none;
  }
}

@media (min-width:760px) {
  .c12 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c5 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c14 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c14 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c1 {
    position: static;
    top: 0;
    left: 0;
    width: 100%;
  }
}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<div
    className="c0 c1"
  >
    <div
      aria-label=""
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <span
                className="c7"
              >
                <div
                  className="c8 c9"
                >
                  <div
                    className="c10"
                  >
                    
                  </div>
                  <span
                    aria-hidden={true}
                    className="c11 c12"
                  >
                    <span
                      className="c13"
                    >
                      1
                    </span>
                  </span>
                  Investment objective
                </div>
              </span>
            </div>
          </li>
          <li
            className="c4 c14"
          >
            <div
              className="c6 "
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c15 c16"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c17"
                >
                  <span
                    className="c18"
                  >
                    <div
                      className="c19 c9"
                    >
                      <span
                        aria-hidden={true}
                        className="c11 c12"
                      >
                        <span
                          className="c20"
                        >
                          2
                        </span>
                      </span>
                      Time and risk
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <ol
              className="c21"
            >
              <li
                className="c22 c23"
              >
                <div
                  className="c24"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c10"
                    >
                      
                    </div>
                    Investment period
                  </span>
                </div>
              </li>
              <li
                className="c22 c23"
              >
                <div
                  className="c24"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c10"
                    >
                      
                    </div>
                    Frequency
                  </span>
                </div>
              </li>
              <li
                className="c22 c23"
              >
                <div
                  className="c24"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c10"
                    >
                      
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <span
                className="c7"
              >
                <div
                  className="c8 c9"
                >
                  <div
                    className="c10"
                  >
                    
                  </div>
                  <span
                    aria-hidden={true}
                    className="c11 c12"
                  >
                    <span
                      className="c13"
                    >
                      3
                    </span>
                  </span>
                  Allocations
                </div>
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        className="c26"
      >
        <ol
          className="c27"
        >
          <li
            className="c4 c14"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c15 c28"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c17"
              >
                <span
                  className="c18"
                >
                  <div
                    className="c19 c9"
                  >
                    <div
                      className="c29"
                    >
                      <div
                        className="c30"
                      >
                        <span
                          aria-hidden={true}
                          className="c11 c12"
                        >
                          <span
                            className="c20"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c30"
                      >
                        <svg
                          aria-hidden="true"
                          className="c31 c32"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<div
    className="c0"
  />,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem debitis dolorem ducimus explicabo facilis fugiat impedit incidunt iusto laborum molestiae natus, obcaecati, officiis provident quae, quaerat quia soluta.
  </p>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {

}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

@media (max-width:975px) {

}

<p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At commodi dolor dolorum eius molestiae qui repudiandae, voluptate. Ad aliquam dolor, labore natus necessitatibus nesciunt temporibus. Ad deserunt eius recusandae? Aspernatur.
  </p>,
]
`;

exports[`Storyshots Molecules / Multi Step Progress Not Started Multi Step Progress 1`] = `
Array [
  .c8 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c19 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c24 {
  padding-left: 44px;
  padding-right: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c29 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  box-sizing: border-box;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c31 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c32 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c25 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c15,
.c15[type='button'],
.c15[type='reset'],
.c15[type='submit'] {
  -webkit-appearance: button;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c13 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c23 {
  display: block;
}

.c23 + .c22 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c27 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c14 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c14::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c9 {
  position: relative;
}

.c16 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c28 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c28 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c8 {
    padding-left: 52px;
  }
}

@media (min-width:760px) {
  .c19 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c24 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c26 {
    display: none;
  }
}

@media (min-width:760px) {
  .c12 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c5 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c14 + .c4::after {
    content: '';
    display: block;
    height: 1px;
    box-sizing: border-box;
    background-color: #EBEBE8;
    position: absolute;
    top: 0;
    left: 12px;
    right: 12px;
  }
}

@media (min-width:976px) {
  .c14 + .c4 .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c1 {
    position: static;
    top: 0;
    left: 0;
    width: 100%;
  }
}

<div
    className="c0 c1"
  >
    <div
      aria-label=""
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <span
                className="c7"
              >
                <div
                  className="c8 c9"
                >
                  <div
                    className="c10"
                  >
                    
                  </div>
                  <span
                    aria-hidden={true}
                    className="c11 c12"
                  >
                    <span
                      className="c13"
                    >
                      1
                    </span>
                  </span>
                  Investment objective
                </div>
              </span>
            </div>
          </li>
          <li
            className="c4 c14"
          >
            <div
              className="c6 "
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c15 c16"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c17"
                >
                  <span
                    className="c18"
                  >
                    <div
                      className="c19 c9"
                    >
                      <span
                        aria-hidden={true}
                        className="c11 c12"
                      >
                        <span
                          className="c20"
                        >
                          2
                        </span>
                      </span>
                      Time and risk
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <ol
              className="c21"
            >
              <li
                className="c22 c23"
              >
                <div
                  className="c24"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c10"
                    >
                      
                    </div>
                    Investment period
                  </span>
                </div>
              </li>
              <li
                className="c22 c23"
              >
                <div
                  className="c24"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c10"
                    >
                      
                    </div>
                    Frequency
                  </span>
                </div>
              </li>
              <li
                className="c22 c23"
              >
                <div
                  className="c24"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c10"
                    >
                      
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <div
              className="c6 "
            >
              <span
                className="c7"
              >
                <div
                  className="c8 c9"
                >
                  <div
                    className="c10"
                  >
                    
                  </div>
                  <span
                    aria-hidden={true}
                    className="c11 c12"
                  >
                    <span
                      className="c13"
                    >
                      3
                    </span>
                  </span>
                  Allocations
                </div>
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        className="c26"
      >
        <ol
          className="c27"
        >
          <li
            className="c4 c14"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c15 c28"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c17"
              >
                <span
                  className="c18"
                >
                  <div
                    className="c19 c9"
                  >
                    <div
                      className="c29"
                    >
                      <div
                        className="c30"
                      >
                        <span
                          aria-hidden={true}
                          className="c11 c12"
                        >
                          <span
                            className="c20"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c30"
                      >
                        <svg
                          aria-hidden="true"
                          className="c31 c32"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

<div
    className="c0"
  />,
]
`;
